--- a/gfwlist-python/pyproject.toml
+++ b/gfwlist-python/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["maturin>=1.8,<2.0"]
-build-backend = "maturin"
-
 [project]
 name = "gfwlist"
 requires-python = ">=3.8"
@@ -9,8 +5,21 @@ classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
+    "License :: OSI Approved :: MIT License",
 ]
 dynamic = ["version"]
+license = "MIT"
+authors = [
+    {name = "Shigma", email = "shigma10826@gmail.com"},
+]
+
+[project.urls]
+Homepage = "https://github.com/shigma/gfwlist"
+Repository = "https://github.com/shigma/gfwlist.git"
+
+[build-system]
+requires = ["maturin>=1.8,<2.0"]
+build-backend = "maturin"
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
