--- a/gfwlist-rust/Cargo.toml
+++ b/gfwlist-rust/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT"
 authors = [
     "Shigma <shigma10826@gmail.com>",
 ]
-description = "A GFW list parser and matcher."
+description = "A fast GFW list parser and matcher."
 repository = "https://github.com/shigma/gfwlist"
 documentation = "https://docs.rs/gfwlist"
 
