--- a/gfwlist-rust/Cargo.toml
+++ b/gfwlist-rust/Cargo.toml
@@ -13,4 +13,5 @@ documentation = "https://docs.rs/gfwlist"
 [dependencies]
 aho-corasick = "1.1.3"
 regex = "1.11.1"
+thiserror = "2.0.17"
 url = "2.5.4"
